r117
- updated sun rev 386
-------------------------------------------------------------------------------------
r116
- added collision to packetaufbau
- updated arcemu rev 1425
- updated sun rev 384
-------------------------------------------------------------------------------------
r115
- updated arcemu rev 1417
-------------------------------------------------------------------------------------
r114
- updated sun rev 381
-------------------------------------------------------------------------------------
r113
- forgot to change max skill
- made patch for max skill
-------------------------------------------------------------------------------------
r109-r112
- updated arcemu rev 1377
- updated sun rev 374
-------------------------------------------------------------------------------------
r108
- updated arcemu rev 1355
- applied patches + created own patch
- updated sun rev 362
-------------------------------------------------------------------------------------
r107
- Added folder sonstiges and Packetaufbau
-------------------------------------------------------------------------------------
r106
- updated arcemu rev 1326
- updated sun rev 355
-------------------------------------------------------------------------------------
r105
- compile fix in mage.cpp
-------------------------------------------------------------------------------------
r104
- compile fix
-------------------------------------------------------------------------------------
r103
- updated arcemu rev 1308
-------------------------------------------------------------------------------------
r102
- updated arcemu rev 1286
-------------------------------------------------------------------------------------
r101
- added BLua commands
-------------------------------------------------------------------------------------
r100
- precompiled map extractor
- precompiled vmap extractor + vmap assembler + collision
- applied custom table reload patch